Fixed hieght on smaller screens.

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -1,5 +1,4 @@
 // out: ../css/stylesheet.css, sourcemap: false, compress: true
-
 #headerArticle {
     h1 {
         font-size-adjust: auto;
@@ -28,24 +27,26 @@
         }
     }
 }
+
 .lb-image {
     width: 400px !important;
-    height: 400px !important;
+    height: auto !important;
     max-width: 80% !important;
-    max-height: 80% !important;
     border: none !important;
     margin: 0 auto !important;
-  }
-  .lb-outerContainer {
+}
+
+.lb-outerContainer {
     width: 400px !important;
-    height: 400px !important;
+    height: auto !important;
     max-width: 80% !important;
-    max-height: 80% !important;
 }
+
 .lb-dataContainer {
-  width: 200px !important;
-  max-width: 30%;
+    width: 200px !important;
+    max-width: 30%;
 }
+
 .lb-data .lb-details {
-  width: 100%;
+    width: 100%;
 }
